Partial Update Profile

--- a/app/src/main/res/drawable/circle_white_solid.xml
+++ b/app/src/main/res/drawable/circle_white_solid.xml
@@ -3,4 +3,6 @@
     android:shape="oval">
     <solid android:color="@color/white"/>
     <size android:width="25dp" android:height="25dp"/>
+
+    <stroke android:color="@color/colorPrimaryDark" android:width="0.2dp"/>
 </shape>
