--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:paddingBottom="20dp"
     android:paddingTop="20dp">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_marginBottom="25dp"
         android:paddingEnd="15dp"
         android:paddingStart="15dp"
         android:scrollbars="none">
@@ -38,60 +37,75 @@
                     android:textColor="@color/textColorPrimary"
                     android:textStyle="bold" />
 
-                <ImageButton
+                <ImageView
                     android:id="@+id/exit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_alignBottom="@id/my_card"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignTop="@id/my_card"
                     android:background="@android:color/transparent"
-                    android:paddingBottom="3dp"
-                    android:paddingTop="3dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/exit" />
+                    android:src="@drawable/ic_mode_edit_black_24px"
+                    />
+
+                <ImageView
+                    android:id="@+id/btn_done"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_alignBottom="@id/my_card"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/my_card"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_done_black_24px"
+                    android:visibility="gone"
+                    />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
 
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_photo"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/ic_person_white_24px"
-                    app:civ_border_color="@color/white"
-                    app:civ_border_width="2dp"
-                    app:civ_circle_background_color="@color/colorActionBarDark" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/circle_maroon_solid_nopadding"
+                    android:src="@drawable/ic_person_white_24px" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/edit_profile_photo"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:id="@+id/edit_photo"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_margin="4dp"
-                    android:background="@color/white"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/ic_camera" />
+                    android:background="@drawable/circle_white_solid"
+                    android:src="@drawable/ic_mode_edit_black_24px"
+                    android:visibility="gone"/>
+
+                <ProgressBar
+                    android:id="@+id/photoProgress"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:visibility="invisible" />
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
+                android:id="@+id/profile_full_name"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="25dp"
                 android:gravity="center"
-                android:layoutDirection="ltr"
-                android:maxLines="1"
-                android:textSize="20sp"
-                android:theme="@style/TextInputThemeProfile" />
+                android:layout_gravity="center_horizontal"
+                android:maxLines="2"
+                android:textSize="18sp"
+                android:theme="@style/TextInputThemeProfile"
+                android:text="Sabih Ahmed Bashir Ahmed Huwaireb"/>
 
             <EditText
                 android:id="@+id/space_holder"
@@ -120,7 +134,12 @@
                     android:layoutDirection="ltr"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="227dp"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -140,7 +159,8 @@
                     android:layoutDirection="ltr"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -151,16 +171,98 @@
                 app:errorEnabled="true">
 
                 <EditText
-                    android:id="@+id/profile_name"
+                    android:id="@+id/profile_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:enabled="false"
-                    android:hint="@string/full_name"
+                    android:hint="First Name"
                     android:inputType="textPersonName"
                     android:layoutDirection="ltr"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
                     android:theme="@style/TextInputThemeProfile" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/update_profile_father_name_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputThemeProfile"
+                app:errorEnabled="true">
+
+                <EditText
+                    android:id="@+id/father_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:enabled="false"
+                    android:hint="Father's Name"
+                    android:inputType="textPersonName"
+                    android:layoutDirection="ltr"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"
+                    android:theme="@style/TextInputThemeProfile" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/update_profile_middle_name_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputThemeProfile"
+                app:errorEnabled="true">
+
+                <EditText
+                    android:id="@+id/middle_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:enabled="false"
+                    android:hint="Middle Name"
+                    android:text="Din"
+                    android:inputType="textPersonName"
+                    android:layoutDirection="ltr"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"
+                    android:theme="@style/TextInputThemeProfile" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/update_profile_last_name_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputThemeProfile"
+                app:errorEnabled="true">
+
+                <EditText
+                    android:id="@+id/last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:enabled="false"
+                    android:hint="Last Name"
+                    android:inputType="textPersonName"
+                    android:layoutDirection="ltr"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"
+                    android:theme="@style/TextInputThemeProfile" />
+
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/update_profile_gender_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputThemeProfile"
+                app:errorEnabled="true">
+
+            <EditText
+                android:id="@+id/gender"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:hint="Gender"
+                android:text="Male"
+                android:inputType="textPersonName"
+                android:layoutDirection="ltr"
+                android:maxLines="1"
+                android:textColor="@color/textColorPrimary"
+                android:theme="@style/TextInputThemeProfile" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -170,36 +272,41 @@
                 android:theme="@style/TextInputThemeProfile"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/profile_dob"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:enabled="false"
                     android:hint="@string/dob"
                     android:inputType="date"
+                    android:clickable="true"
+                    android:focusable="false"
                     android:layoutDirection="ltr"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/update_profile_city_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="City"
                 android:theme="@style/TextInputThemeProfile"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/profile_city"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:enabled="false"
+                    android:clickable="true"
+                    android:focusable="false"
                     android:hint="@string/city"
                     android:inputType="text"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -218,7 +325,8 @@
                     android:inputType="text"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -238,7 +346,8 @@
                     android:layoutDirection="ltr"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -248,17 +357,19 @@
                 android:theme="@style/TextInputThemeProfile"
                 app:errorEnabled="true">
 
-                <EditText
+                <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/profile_sponsor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:enabled="false"
                     android:hint="@string/sponsor"
+                    android:clickable="true"
+                    android:focusable="false"
                     android:inputType="text"
                     android:layoutDirection="ltr"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"
-                    android:theme="@style/TextInputThemeProfile" />
+                    android:theme="@style/TextInputThemeProfile"
+                    />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
