--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="240dp">
     <RelativeLayout
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -43,9 +43,10 @@
         android:layout_below="@id/profile_image_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Abdulla Mohamed"
+        android:text=""
         style="@style/label_heading"
         />
 </RelativeLayout>
