--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -24,7 +24,7 @@
             android:layout_height="?attr/actionBarSize"
             app:tabTextColor="@color/lightGrey"
             app:tabGravity="center"
-            app:tabMode="fixed"
+            app:tabMode="scrollable"
             app:tabIndicatorHeight="0dp"
             android:background="@android:color/white">
 
