--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="height_bio_fields">60dp</dimen>
     <dimen name="textSizeSmall">14sp</dimen>
     <dimen name="error_small">8sp</dimen>
+
+    <dimen name="error_big">12sp</dimen>
+
 </resources>
