--- a/app/src/main/res/layout/screen_city_list.xml
+++ b/app/src/main/res/layout/screen_city_list.xml
@@ -4,19 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="netaq.com.zayedsons.views.ScreenSearchableList">
 
     <RelativeLayout
         android:id="@+id/city_list_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.SearchView
             android:id="@+id/city_search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:searchIcon="@drawable/ic_search_24px">
+            app:searchIcon="@drawable/ic_search_24px"
+            >
 
         </android.support.v7.widget.SearchView>
         <android.support.v7.widget.RecyclerView
@@ -24,7 +25,7 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/city_search_view">
 
         </android.support.v7.widget.RecyclerView>
@@ -34,6 +35,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerInParent="true"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
